tiny template fix
- fix scrollbar in torrent list shown when not needed

--- a/static/less/module-rtorrentdl.less
+++ b/static/less/module-rtorrentdl.less
@@ -23,7 +23,6 @@
 	}
 
 	#torrentlist_dynamic {
-		overflow: auto;
 		margin-top: 10px;
 		margin-bottom: 15px;
 		margin-left: 15px;
@@ -40,7 +39,7 @@
 		border: 1px solid #222;
 		.border-radius(4px); */
 	}
-	
+
 	.name {
 		font-size: 0.9em;
 		font-size: smaller;
